# TechDays2019

./: .gitignore  WebViews.sln  XamlIslands.sln
DotNetCore.MonoGame/: Game1.cs  Program.cs
DotNetCore.WPF/: MainWindow.xaml  MainWindow.xaml.cs
DotNetCore.WinForms/: Form1.Designer.cs
ReactNativeUWP/: app.json  package.json  run.ps1
ReactNativeUWP/android/: settings.gradle
ReactNativeUWP/android/app/: BUCK  build.gradle
ReactNativeUWP/ios/: Podfile
ReactNativeUWP/ios/ReactNativeUWP/: AppDelegate.m  Info.plist
ReactNativeUWP/ios/ReactNativeUWP.xcodeproj/: project.pbxproj
ReactNativeUWP/ios/ReactNativeUWPTests/: ReactNativeUWPTests.m
ReactNativeUWP/windows/: ReactNativeUWP.sln
ReactNativeUWP/windows/ReactNativeUWP/: App.cpp  App.h  App.idl  App.xaml  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  Package.appxmanifest  ReactNativeUWP.vcxproj  (+1 more)
WebViews/: WebViews.csproj  packages.config
WebViews.MSIX/: Package.appxmanifest  WebViews.MSIX.wapproj
WinUI.CppWinRT/: App.cpp  App.h  App.idl  App.xaml  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  Package.appxmanifest  WinUI.CppWinRT.sln  WinUI.CppWinRT.vcxproj  WinUI.CppWinRT_TemporaryKey.pfx  packages.config  readme.txt
XamlIslands.WPF/: MainWindow.xaml.cs  XamlIslands.WPF.csproj
XamlIslands.Win32/: XamlIslands.Win32.aps  XamlIslands.Win32.vcxproj
XamlIslands.WinForms/: XamlIslands.WinForms.csproj
rsuwp/: Cargo.toml
rsuwp/src/: main.rs
winforms/: Form1.cs  Program.cs
wpf/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TechDays2019.csproj
(+5 files in other folders)
