[package]
name = "rsuwp"
version = "0.1.0"
authors = ["Johan Lindfors <johan.lindfors@coderox.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winrt]
version = "0.6.0"
features = ["windows-system", "windows-web", "windows-security", "windows-data", "windows-ui"]